# mart_gui

./: MANIFEST.in  README.md  mart.py  mat_gui.py  requirements.txt  setup.cfg  setup.py
mart_gui/: app.py
mart_gui/resources/: icons.qrc  mat.ui  res.py
src/: about_box.py  app_logic.py  error_message.py  item_parameters.py  log_config.py  logic.py  main_window.py  ui_classes.py
src/resources/: about.ui  mat.ui
