[metadata]
name = mart
license_files = LICENSE.txt
author = Artiom N.
# author_email = author@example.com
description = Markdown articles downloader and converter GUI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/artiomn/mart-gui
project_urls =
    Bug Tracker = https://github.com/artiomn/mart-gui/issues
    Source Code = https://github.com/artiomn/mart-gui/
keywords = html, markdown, pdf, downloader, images, markdown-parser, markdown-to-html, markdown converter, md, markdown-to-pdf, markdown-articles, gui
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Topic :: Text Processing :: Markup :: Markdown
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

# Apply MANIFEST.in.
include_package_data = True

[options.packages.find]
where = .

[pycodestyle]
indent-size = 4
max-line-length = 100
